--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(205, 118, 31);
 }
 
 .App-link {
